# unity-system-compositor

./: .bzrignore  CMakeLists.txt  HACKING.md
cmake/: FindGtest.cmake
debian/: 10-unity-system-compositor.conf  changelog  control  copyright  rules  source_unity-system-compositor.py  ubuntu-desktop-mir.install  ubuntu-desktop-mir.maintscript  unity-system-compositor-autopilot.install  unity-system-compositor-spinner.1  unity-system-compositor-tests.install  unity-system-compositor.1  unity-system-compositor.install  unity-system-compositor.maintscript  unity-system-compositor.manpages  unity-system-compositor.postinst  unity-system-compositor.preinst  unity-system-compositor.sleep  watch
debian/tests/: control  mir
po/: CMakeLists.txt  POTFILES.in  fr.po  unity-system-compositor.pot
spinner/: CMakeLists.txt  eglapp.c  eglapp.cpp  eglapp.h  eglspinner.c  eglspinner.cpp  eglsurface.h  miregl.cpp  miregl.h  spinner_glow.h  spinner_logo.h
spinner/mir/: eglapp.cpp  eglapp.h  miregl.cpp  miregl.h
spinner/wayland/: eglapp.cpp  eglapp.h  waylandegl.cpp  waylandegl.h
src/: CMakeLists.txt  asio_dm_connection.cpp  asio_dm_connection.h  clock.h  com.canonical.Unity.Display.xml  com.canonical.Unity.Gestures.xml  com.canonical.Unity.Input.xml  com.canonical.Unity.PowerButton.xml  com.canonical.Unity.PowerKey.conf  com.canonical.Unity.Screen.conf  com.canonical.Unity.Screen.xml  com.canonical.Unity.UserActivity.xml  com.canonical.Unity.conf  com.ubports.Lomiri.Gestures.xml  com.ubports.Lomiri.conf  com.ubports.Unity.Gestures.xml  com.ubports.Unity.conf  create_dm_connection.cpp  create_dm_connection.h  dbus_connection_handle.cpp  dbus_connection_handle.h  dbus_connection_thread.cpp  dbus_connection_thread.h  dbus_event_loop.cpp  dbus_event_loop.h  dbus_message_handle.cpp  dbus_message_handle.h  dbus_powerkey.cpp  dbus_powerkey.h  dbus_screen.cpp  dbus_screen.h  dbus_screen_observer.h  display_configuration_policy.cpp  display_configuration_policy.h  dm_connection.cpp  dm_connection.h  external_spinner.cpp  external_spinner.h  extract_socket_config.cpp  extract_socket_config.h  (+69 more)
tests/: CMakeLists.txt
tests/autopilot/: setup.py
tests/autopilot/unity_system_compositor/: __init__.py  test_runtime.py
tests/include/usc/: mock_display.h
tests/include/usc/test/: mock_display.h  mock_input_configuration.h  mock_screen.h  stub_display_configuration.h
tests/integration-tests/: CMakeLists.txt  dbus_bus.cpp  dbus_bus.h  dbus_client.cpp  dbus_client.h  run_command.cpp  run_command.h  spin_wait.cpp  spin_wait.h  test_dbus_event_loop.cpp  test_deadlock_lp1491566.cpp  test_external_spinner.cpp  test_powerd_mediator.cpp  test_unity_display_service.cpp  test_unity_input_service.cpp  test_unity_power_button_event_sink.cpp  test_unity_screen_service.cpp  test_unity_services.cpp  test_unity_user_activity_event_sink.cpp  unity_display_dbus_client.cpp  unity_display_dbus_client.h  unity_input_dbus_client.cpp  unity_input_dbus_client.h  unity_screen_dbus_client.cpp  unity_screen_dbus_client.h  usc_test_helper_wait_for_signal.c  wait_condition.h
tests/unit-tests/: CMakeLists.txt  advanceable_timer.cpp  advanceable_timer.h  fake_shared.h  test_mir_input_configuration.cpp  test_mir_screen.cpp  test_screen_event_handler.cpp  test_session_switcher.cpp
tools/: png2header.py
